rimossi commenti inutili, aggiunto openapi aggiornato e fix 2 bug su movimenti stock e giacenze model
